--- a/shared/package.json
+++ b/shared/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "vocalza-components",
-  "main": "expo-router/entry",
-  "version": "1.0.0",
+  "name": "vocalza-componenets",
+  "version": "1.0.2",
+  "description": "index file changes",
+  "main": "index.ts",
+  "types": "dist/types/vocalza-components.d.ts",
   "scripts": {
-    "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll",
-    "lint": "expo lint"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "jest": {
-    "preset": "jest-expo"
-  },
-  "dependencies": {
+  "author": "",
+  "license": "ISC",
+  "peerDependencies": {
     "@ant-design/icons": "^5.5.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -50,19 +45,7 @@
     "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2",
-    "vocalza-componenets": "^1.0.2"
+    "react-native-webview": "13.12.2"
   },
-  "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
-    "@types/react-native": "^0.73.0",
-    "@types/react-test-renderer": "^18.3.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~52.0.0",
-    "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
-  },
-  "private": true
+  "dependencies": {}
 }
