--- a/shared/package.json
+++ b/shared/package.json
@@ -1,7 +1,8 @@
 {
   "name": "vocalza-componenets",
-  "version": "1.0.2",
-  "description": "index file changes",
+  "version": "1.0.4",
+  "private": false,
+  "description": "README file changes",
   "main": "index.ts",
   "types": "dist/types/vocalza-components.d.ts",
   "scripts": {
