--- a/package.json
+++ b/package.json
@@ -48,9 +48,10 @@
     "react-native-gesture-handler": "^2.21.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-volume-manager": "^1.10.0",
