--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "shared/index.js"
-, "shared/types/Button.tsx"  ]
+    "shared/index.js",
+    "shared/types/Button.tsx"
+  ]
 }
