--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "@simform_solutions/react-native-audio-waveform": "^2.1.2",
     "expo": "~52.0.4",
     "expo-av": "^15.0.1",
     "expo-blur": "~14.0.1",
