--- a/shared/package.json
+++ b/shared/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vocalza-componenets",
-  "version": "1.0.8",
+  "version": "1.0.12",
   "private": false,
-  "description": "Swicth components type changes",
+  "description": "type pending to exported, Recording component push type changes",
   "main": "index.ts",
   "types": "dist/types/vocalza-components.d.ts",
   "scripts": {
@@ -20,31 +20,38 @@
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "@simform_solutions/react-native-audio-waveform": "^2.1.2",
     "expo": "~52.0.4",
+    "expo-av": "^15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.2",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linear-gradient": "^14.0.1",
-    "expo-linking": "~7.0.2",
+    "expo-linking": "~7.0.3",
     "expo-router": "~4.0.3",
     "expo-splash-screen": "~0.29.7",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.2",
     "expo-web-browser": "~14.0.0",
+    "lodash": "^4.17.21",
     "lucide-react-native": "^0.460.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-volume-manager": "^1.10.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2"
   },
